@@ -11,7 +11,7 @@ Full documentation for this release can also be found in docs/index.html
 ---------------------------
 Packaging/release artifacts
 
-The release artifact contains the following jar files:
+The release artifact contains the following jar file at the toplevel:
 
 zookeeper-<version>.jar         - legacy jar file which contains all classes
                                   and source files. Prior to version 3.3.0 this
@@ -20,13 +20,17 @@ zookeeper-<version>.jar         - legacy jar file which contains all classes
                                   debugging purposes) however is also larger as
                                   a result
 
-zookeeper-<version>-bin.jar     - contains only class (*.class) files
+The release artifact contains the following jar files in "dist-maven" directory:
+
+zookeeper-<version>.jar         - bin (binary) jar - contains only class (*.class) files
 zookeeper-<version>-sources.jar - contains only src (*.java) files
 zookeeper-<version>-javadoc.jar - contains only javadoc files
 
-The bin/src/javadoc jars were added specifically to support Maven/Ivy which have 
+These bin/src/javadoc jars were added specifically to support Maven/Ivy which have 
 the ability to pull these down automatically as part of your build process. 
 The content of the legacy jar and the bin+sources jar are the same.
 
-As of version 3.3.0 bin/sources/javadoc jars are deployed to the Apache Maven 
-repository: http://people.apache.org/repo/m2-ibiblio-rsync-repository/
+As of version 3.3.0 bin/sources/javadoc jars contained in dist-maven directory
+are deployed to the Apache Maven repository after the release has been accepted
+by Apache:
+  http://people.apache.org/repo/m2-ibiblio-rsync-repository/
