@@ -27,6 +27,12 @@ BUGFIXES:
   ZOOKEEPER-754. numerous misspellings "succesfully"
   (Savu Andrei via phunt)
 
+  ZOOKEEPER-749. OSGi metadata not included in binary only jar (phunt
+  via henryr)
+
+  ZOOKEEPER-750. move maven artifacts into "dist-maven" subdir of the
+  release (package target) (phunt via henryr)
+
 Release 3.3.0 - 2010-03-24
 
 Non-backward compatible changes:
